# mugge

./: .gitignore  CLAUDE.md  README.md  SETUP-MANUAL.md  flake.nix
.claude/memories/: _index.md  coding-principles.md  d040-architecture-transition.md  playwright-usage.md
.claude/team/: config.md  consultation-matrix.md  lessons-learned.md  retrospective-2026-03-10-transcript.md
.github/workflows/: test.yml
configs/: README.md
configs/drivers/: TEMPLATE.yml
configs/labwc/: autostart  environment  rc.xml
configs/local-demo/: room-sim-convolver.conf  umik1-loopback.conf
configs/pcm-bridge/: capture-usb.env  monitor.env
configs/pipewire/: 10-audio-settings.conf  20-usbstreamer.conf  25-loopback-8ch.conf  30-filter-chain-convolver.conf
configs/room-correction/: default_profile.yml  venue_template.yml
configs/udev/: 90-usbstreamer-lockout.rules
configs/wayvnc/: config
configs/xdg-desktop-portal-wlr/: config
data/: README.md
docs/: user-journeys.md
docs/architecture/: config-management-midi-control.md  graph-manager.md  measurement-daemon.md  measurement-workflow-ux.md  rt-audio-stack.md  rt-services.md  rt-signal-generator.md  unified-graph-analysis.md  web-ui.md  (+1 more)
results/: README.md
scripts/: README.md  generate-room-sim-ir.py  local-demo.sh  local-pw-test-env.sh
src/: Cargo.toml
src/graph-manager/: Cargo.toml
src/graph-manager/src/: graph.rs  lifecycle.rs  link_audit.rs  main.rs  reconcile.rs  registry.rs  routing.rs  rpc.rs  watchdog.rs
src/level-bridge/: Cargo.toml
src/level-bridge/src/: main.rs  notifier.rs  server.rs
(+2751 files in other folders)
