[package]
name = "level-bridge"
version = "0.1.0"
edition = "2021"
description = "PipeWire level metering bridge — always-on, self-linking (D-049)"
license = "MIT"

[dependencies]
audio-common = { path = "../audio-common" }
pipewire = "0.8"
pipewire-sys = "0.8"
libspa = "0.8"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
